[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
clap = { version = "3.2.2", features = ["derive"] }
log = { version = "0.4.17", features = ["kv_unstable"] }
femme = "2.2.1"
crabler = "0.1.28"